optimize to use virtual threads